--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@
 body {
   /* height: 10000px; */
 }
+.overlay {
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
 /* ========================NAVBAR=================================== */
 
 .navbar {
@@ -41,6 +47,14 @@ body {
 .landing {
   background-color: var(--dark-color);
   height: 100vh;
+  position: relative;
+}
+
+.landing-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .landing h1 {
   font-size: 3rem;
